@@ -1,21 +1,34 @@
 package com.zeropick.backend.product.dto;
 
+import java.util.Collections;
 import java.util.List;
 import com.zeropick.backend.product.entity.Product;
-import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.v3.oas.annotations.media.Schema;
 
 public record ProductDetailResponse(
-        @JsonProperty("productId") Long productId,
-        @JsonProperty("productName") String productName,
-        Integer grade,
+        Long productId,
+        String productName,
+
+        @Schema(description = "상품 점수", example = "85")
+        Integer score,
+
+        @Schema(description = "조회수", example = "120")
+        Integer viewCount,
+
+        @Schema(description = "한줄평", example = "특별한 감미료 이슈 없이 무난하게 구성된 제품입니다.")
+        String summary,
+
+        @Schema(description = "상품 이미지 URL")
+        String image,
+
         Boolean warningAdditive,
         Nutrition nutrition,
         IngredientsAnalysis ingredientsAnalysis
 ) {
     public record Nutrition(
             Integer calories,
-            Integer sugar,
-            Integer sodium
+            Double sugar,
+            Double sodium
     ) {}
 
     public record IngredientsAnalysis(
@@ -39,22 +52,17 @@ public record ProductDetailResponse(
         return new ProductDetailResponse(
                 product.getId(),
                 product.getName(),
-                product.getGrade() != null ? product.getGrade().intValue() : 0,
+                product.getScore() != null ? product.getScore().intValue() : 0,
+                product.getViewCount() != null ? product.getViewCount() : 0,
+                product.getSummary(),
+                product.getImageUrl(),
                 product.getWarningAdditive() != null ? product.getWarningAdditive() : false,
                 new Nutrition(
                         product.getCalories() != null ? product.getCalories() : 0,
-                        product.getSugar() != null ? product.getSugar().intValue() : 0,
-                        product.getSodium() != null ? product.getSodium().intValue() : 0
+                        product.getSugar() != null ? product.getSugar().doubleValue() : 0.0,
+                        product.getSodium() != null ? product.getSodium().doubleValue() : 0.0
                 ),
-                // ✅ 핵심: ingredientsAnalysis에 빈 배열 대신 더미 데이터 삽입
-                new IngredientsAnalysis(
-                        List.of(
-                                new SweetenerDetail("수크랄로스", "GENERAL", "일반적인 2등급 대체당")
-                        ),
-                        List.of(
-                                new AdditiveDetail("카라멜색소", "WARNING", "노화 촉진 성분 함유")
-                        )
-                )
+                new IngredientsAnalysis(Collections.emptyList(), Collections.emptyList())
         );
     }
 }
